# blendoc

./: Cargo.toml  README.md  flake.nix
crates/blendoc_cli/: Cargo.toml
crates/blendoc_cli/src/cmd/: camera.rs  chase.rs  decode.rs  dna.rs  mod.rs  test_support.rs
crates/blendoc_cli/src/cmd/info/: mod.rs
crates/blendoc_cli/src/cmd/libs/: tests.rs
crates/blendoc_cli/src/cmd/print/: tests.rs
crates/blendoc_cli/src/cmd/route/: tests.rs
crates/blendoc_cli/src/cmd/show/: mod.rs  tests.rs
crates/blendoc_core/: Cargo.toml
crates/blendoc_core/src/: lib.rs
crates/blendoc_core/src/blend/: bhead.rs  block.rs  bytes.rs  decl.rs  error.rs  header.rs  mod.rs  path.rs  value.rs
crates/blendoc_core/src/blend/bhead/: mod.rs  tests.rs
crates/blendoc_core/src/blend/chase/: mod.rs  tests.rs
crates/blendoc_core/src/blend/chase_path/: tests.rs
crates/blendoc_core/src/blend/decl/: mod.rs  tests.rs
crates/blendoc_core/src/blend/decode/: mod.rs  tests.rs
crates/blendoc_core/src/blend/dna/: mod.rs  tests.rs
crates/blendoc_core/src/blend/file/: mod.rs  tests.rs
crates/blendoc_core/src/blend/graph/: tests.rs
crates/blendoc_core/src/blend/header/: mod.rs  tests.rs
crates/blendoc_core/src/blend/id/: tests.rs
crates/blendoc_core/src/blend/idgraph/: mod.rs  tests.rs
crates/blendoc_core/src/blend/liblink/: tests.rs
crates/blendoc_core/src/blend/pointer/: mod.rs  tests.rs
crates/blendoc_core/src/blend/refs/: mod.rs  tests.rs
crates/blendoc_core/src/blend/route/: mod.rs  tests.rs
crates/blendoc_core/src/blend/walk/: tests.rs
crates/blendoc_core/src/blend/xref/: tests.rs
crates/blendoc_testkit/: Cargo.toml
fixtures/: character.blend  sword.blend  v5.1_character.blend  v5.1_sword.blend
fixtures/blendfiles/: .gitignore  README.md  blendfiles_map.json
nix/: default.nix
src/: lib.rs  main.rs
src/blend/: bhead.rs  block.rs  bytes.rs  chase.rs  chase_path.rs  compression.rs  decode.rs  dna.rs  error.rs  file.rs  graph.rs  header.rs  id.rs  idgraph.rs  mod.rs  path.rs  pointer.rs  refs.rs  route.rs  value.rs  walk.rs  xref.rs
src/cmd/: camera.rs  chase.rs  (+16 more)
tests/: fixtures_day1.rs  fixtures_day10_route.rs  fixtures_day11_idgraph.rs  fixtures_day12_show.rs  fixtures_day13_walk.rs  fixtures_day2_dna.rs  fixtures_day3_decode.rs  fixtures_day3_scene.rs  fixtures_day4_chase_camera.rs  fixtures_day4_chase_path.rs  fixtures_day4_pointers.rs  fixtures_day5_ids.rs  fixtures_day6_chase_ids.rs  fixtures_day7_refs.rs  fixtures_day8_graph.rs  fixtures_day9_xref.rs  unit_chase_cycle.rs  unit_cli_json.rs  unit_print_ptr_annot.rs  unit_print_ptr_expand.rs  unit_walk_chain.rs
(+35 files in other folders)
