[package]
name = "blendoc"
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
description = "Experimental Blender tools"
license = "MIT"
repository = "https://github.com/Alb-O/blendoc"
readme = "README.md"
keywords = []

[[bin]]
name = "blendoc"
path = "src/main.rs"

[lints.rust]
missing_docs = "warn"
