[package]
name = "blendoc"
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
description = "Experimental Blender tools core library"
license = "MIT"
repository = "https://github.com/Alb-O/blendoc"
readme = "../../README.md"
keywords = []

[dependencies]
thiserror = "2.0.11"
zstd = "0.13.3"

[dev-dependencies]
blendoc_testkit = { path = "../blendoc_testkit" }

[lints]
workspace = true
